Gallery display on small size screen fixed

--- a/css/style.css
+++ b/css/style.css
@@ -1768,6 +1768,7 @@ span + .property-display__icon {
 
     .gallery_large-wrapper {
         margin-bottom: 0px;
+        max-height: initial;
     }
 
     .feedback {
